Startup Studio - New section Market StartUps

--- a/studio.topmonks.com/src/html/index.njk
+++ b/studio.topmonks.com/src/html/index.njk
@@ -403,6 +403,34 @@
       </div>
     </div>
   </section>
+  <section id="market-startups" class="portfolio">
+    <div class="mdc-layout-grid tm-layout-wrapper">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <h2 class="h2_black">Startups built and tested in the market</h2>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+            <img src="/images/logo/2pocket.svg" alt="Logo 2Pocket" height="100" width="148"/>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+            <img src="/images/logo/bouncepilot.svg" alt="Logo Bounce Pilot" height="100" width="148"/>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+            <img src="/images/logo/coocoon.svg" alt="Logo CoocooShop" height="100" width="148"/>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+            <img src="/images/logo/ingrid.svg" alt="Logo Ingrid" height="100" width="148"/>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+            <img src="/images/logo/purposefly.svg" alt="Logo Purposefly" height="100" width="148"/>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+            <img src="/images/logo/quickshirt.svg" alt="Logo Quickshirt" height="100" width="148"/>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section id="network" class="network">
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
