--- a/studio.topmonks.com/src/stylesheets/main.scss
+++ b/studio.topmonks.com/src/stylesheets/main.scss
@@ -240,6 +240,11 @@ button {
   --mdc-layout-grid-gutter-phone: 0;
 }
 
+/*Portfolio of Startups in market*/
+#market-startups {
+  padding: 2em 0 3em;
+}
+
 /*Summary*/
 #summary {
   padding-top: 2em;
