--- a/www.hackercamp.cz/src/html/pro-hackery/index.njk
+++ b/www.hackercamp.cz/src/html/pro-hackery/index.njk
@@ -462,10 +462,10 @@
           src="https:////speakerdeck.com/player/9363b64af28a4a57b2fb85fa37240944"
           width="710"
           height="399"
-          style="aspect-ratio:710/399; border:0; padding:0; margin:2em auto; width: 100%; height: auto; max-width: 1400px; background:transparent;"
+          style="aspect-ratio:710/399; border:0; padding:0; margin: 0 auto; width: 100%; height: auto; max-width: 1280px; background:transparent;"
           allowtransparency="true"
           allowfullscreen></iframe>
-        <h1>Vyhodnocení Hacker camp 2021</h1>
+        <h1 style="margin-top: 1em">Vyhodnocení Hacker camp 2021</h1>
       </div>
     </div>
   </header>
