[www.hackercamp.cz] Fix presentation link

--- a/www.hackercamp.cz/src/html/pro-hackery/index.njk
+++ b/www.hackercamp.cz/src/html/pro-hackery/index.njk
@@ -459,7 +459,7 @@
         <iframe
           id="talk_frame_794585"
           class="speakerdeck-iframe"
-          src="https:////speakerdeck.com/player/9363b64af28a4a57b2fb85fa37240944"
+          src="https://speakerdeck.com/player/9363b64af28a4a57b2fb85fa37240944"
           width="710"
           height="399"
           style="aspect-ratio:710/399; border:0; padding:0; margin: 0 auto; width: 100%; height: auto; max-width: 1280px; background:transparent;"
@@ -481,7 +481,7 @@
         výdaje a příjmy, zpracovat vaši zpětnou vazbu a rozhodnout se, jak to
         udělat s&nbsp;dalším ročníkem. Ale už máme za náš společný nultý
         ročník všechno info pohromadě. Nehodláme si ho nechat jen pro sebe. Takže
-        pokud tě zajímají všechny podrobnosti, koukni se na <a href="#prezentace">prezentaci</a>, co
+        pokud tě zajímají všechny podrobnosti, koukni se na <a href="https://speakerdeck.com/rarous/7ace4303af3fcbbb0f80cb66c88e0085">prezentaci</a>, co
         připravil&nbsp;Kuba.</p>
 
       <h2 id="toc-tldr">TLDR</h2>
