Hookamonk - Header smoke bg center

--- a/www.hookamonk.com/src/stylesheets/v2/catering.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/catering.scss
@@ -17,7 +17,7 @@
 .hm-intro {
   position: relative;
   background-image: cloudinaryUrl("hookamonk.com/bg_header-smoke-2.jpg");
-  background-position: 0 50%;
+  background-position: center;
   background-repeat: no-repeat;
   height: 100%;
   -webkit-background-size: cover;
