Hookamonk - added rel="noopener" to links to secure them

--- a/www.hookamonk.com/src/html/index.njk
+++ b/www.hookamonk.com/src/html/index.njk
@@ -550,7 +550,7 @@
           <p>✓ No initial down payment<br>
             ✓ Monthly payments based on the number of Warp sessions served</p>
           <button class="button button__contained button__contained--white">
-            <a href="mailto:sales@hookamonk.com?subject=I want Warp for hookah lounge" class="button__label">Next</a>
+            <a href="mailto:sales@hookamonk.com?subject=I want Warp for hookah lounge" rel="noopener" class="button__label">Next</a>
           </button>
         </div>
       </div>
@@ -837,7 +837,7 @@
               <p>The unique hookahs for the spiritual dimension of the contemporary smoking experience.</p>
             </div>
             <div class="hm-product-type__link">
-              <a href="https://www.animahookah.com/" target="_blank">More info</a>
+              <a href="https://www.animahookah.com/" rel="noopener" target="_blank">More info</a>
             </div>
           </div>
         </div>
@@ -854,7 +854,7 @@
               <p>Durable, elegant and well manufactured hookah for a lifetime daily use.</p>
             </div>
             <div class="hm-product-type__link">
-              <a href="https://shop.hookamonk.com/nebulla/" target="_blank">More info</a>
+              <a href="https://shop.hookamonk.com/nebulla/" rel="noopener" target="_blank">More info</a>
             </div>
           </div>
         </div>
@@ -870,7 +870,7 @@
               <p>Treat yourself and your friends with our unique hookah accessories.</p>
             </div>
             <div class="hm-product-type__link">
-              <a href="https://shop.hookamonk.com/accessories/" target="_blank">More info</a>
+              <a href="https://shop.hookamonk.com/accessories/" rel="noopener" target="_blank">More info</a>
             </div>
           </div>
         </div>
