--- a/www.hookamonk.com/src/html/v2/for-home-hookamonk/index.njk
+++ b/www.hookamonk.com/src/html/v2/for-home-hookamonk/index.njk
@@ -685,7 +685,7 @@
               <p>The unique hookahs for the spiritual dimension of the contemporary smoking experience.</p>
             </div>
             <div class="hm-product-type__link">
-              <a href="https://www.animahookah.com/" target="_blank">More info</a>
+              <a href="https://www.animahookah.com/" rel="noopener" target="_blank">More info</a>
             </div>
           </div>
         </div>
@@ -701,7 +701,7 @@
               <p>Durable, elegant and well manufactured hookah for a lifetime daily use.</p>
             </div>
             <div class="hm-product-type__link">
-              <a href="https://shop.hookamonk.com/nebulla/" target="_blank">More info</a>
+              <a href="https://shop.hookamonk.com/nebulla/" rel="noopener" target="_blank">More info</a>
             </div>
           </div>
         </div>
@@ -717,7 +717,7 @@
               <p>Treat yourself and your friends with our unique hookah accessories.</p>
             </div>
             <div class="hm-product-type__link">
-              <a href="https://shop.hookamonk.com/accessories/" target="_blank">More info</a>
+              <a href="https://shop.hookamonk.com/accessories/" rel="noopener" target="_blank">More info</a>
             </div>
           </div>
         </div>
