--- a/www.hookamonk.com/src/stylesheets/v2/main.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/main.scss
@@ -77,12 +77,12 @@ main .material-icons {
 //
 // Zoom
 .zoom {
-  transition: transform .5s;
+  transition: transform 0.65s;
   /* Animation */
 }
 
 .zoom:hover {
-  transform: scale(1.1);
+  transform: scale(1.07);
   /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
   background-color: fff;
   border-radius: 10px;
