--- a/www.hookamonk.com/src/html/index.njk
+++ b/www.hookamonk.com/src/html/index.njk
@@ -837,7 +837,7 @@
               <p>The unique hookahs for the spiritual dimension of the contemporary smoking experience.</p>
             </div>
             <div class="hm-product-type__link">
-              <a href="https://www.animahookah.com/" rel="noopener" target="_blank">More info</a>
+              <a href="https://www.animahookah.com/" title="Anima Hookah" rel="noopener" target="_blank">More info</a>
             </div>
           </div>
         </div>
@@ -854,7 +854,7 @@
               <p>Durable, elegant and well manufactured hookah for a lifetime daily use.</p>
             </div>
             <div class="hm-product-type__link">
-              <a href="https://shop.hookamonk.com/nebulla/" rel="noopener" target="_blank">More info</a>
+              <a href="https://shop.hookamonk.com/nebulla/" title="Nebulla Hookah" rel="noopener" target="_blank">More info</a>
             </div>
           </div>
         </div>
@@ -870,7 +870,7 @@
               <p>Treat yourself and your friends with our unique hookah accessories.</p>
             </div>
             <div class="hm-product-type__link">
-              <a href="https://shop.hookamonk.com/accessories/" rel="noopener" target="_blank">More info</a>
+              <a href="https://shop.hookamonk.com/accessories/" title="Hookah Acessories" rel="noopener" target="_blank">More info</a>
             </div>
           </div>
         </div>
