--- a/www.hookamonk.com/src/html/components/header2.njk
+++ b/www.hookamonk.com/src/html/components/header2.njk
@@ -80,9 +80,13 @@
   </div>
   <nav id="navigation" class="tm-menu">
     <ul class="tm-menu__list">
-      <p>External links</p>
+      <p>Navigation</p>
+      <li><a href="/for-home">For home</a></li>
+      <li><a href="/for-workspace">For workspace</a></li>
+      <li><a href="mailto:sales@hookamonk.com?subject=I want Warp for hookah lounge" rel="noopener">For hookah lounge</a></li>
+
+      <br><p>External links</p>
       <li><a href="https://shop.hookamonk.com/">E-shop</a></li>
-      <li><a href="/catering">I want it for my lounge</a></li>
     </ul>
     <div class="header__content--social-phone">
       <a href="https://www.facebook.com/hookamonk/" class="material-icons" title="Facebook Logo" target="_blank" rel="noopener">
@@ -98,10 +102,7 @@
                 d="M6 0H15C18.3137 0 21 2.68629 21 6V15C21 18.3137 18.3137 21 15 21H6C2.68629 21 0 18.3137 0 15V6C0 2.68629 2.68629 0 6 0ZM6 2H15C17.2091 2 19 3.79086 19 6V15C19 17.2091 17.2091 19 15 19H6C3.79086 19 2 17.2091 2 15V6C2 3.79086 3.79086 2 6 2ZM16 10.5C16 7.46243 13.5376 5 10.5 5C7.50628 5.10332 5.10332 7.50628 5 10.5C5 13.5376 7.46243 16 10.5 16C13.5376 16 16 13.5376 16 10.5ZM10.58 7C11.4874 6.99947 12.3578 7.35956 12.9996 8.00099C13.6414 8.64242 14.002 9.51261 14.002 10.42C13.947 12.3648 12.3819 13.9277 10.437 13.98C9.52971 13.9805 8.6594 13.6204 8.01776 12.979C7.37611 12.3375 7.01573 11.4673 7.016 10.56C7.07151 8.61578 8.63572 7.05332 10.58 7ZM17 5C17 4.44772 16.5523 4 16 4C15.4477 4 15 4.44772 15 5C15 5.55228 15.4477 6 16 6C16.5523 6 17 5.55228 17 5Z"
                 fill="#000"/>
         </svg>
-      </a><br>
-      <button class="button button__outlined">
-        <a href="#warp" class="button__label">I want Warp</a>
-      </button>
+      </a>
     </div>
 
 
@@ -118,7 +119,7 @@
         appBar.classList.toggle("tm-app-bar--open");
       };
     }
-    
+
     // var lastPosition = 0;
     // var ticking = false;
     // document.addEventListener("scroll", function() {
