--- a/www.hookamonk.com/src/stylesheets/v2/header.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/header.scss
@@ -108,7 +108,6 @@
         margin: 4px;
         color: #fff;
         text-decoration: none;
-        display: block;
         /* Display block instead of inline */
         transition: 0.3s;
         /* Transition effects on hover (color) */
@@ -118,6 +117,10 @@
             display: block;
             /* Display block instead of inline */
         }
+
+      @media (max-width: 539px) {
+        font-size: 28px;
+      }
     }
 }
 
