StudioTopMonks - nová loga

--- a/studio.topmonks.com/src/html/index.njk
+++ b/studio.topmonks.com/src/html/index.njk
@@ -366,17 +366,20 @@
   <section id="clients" class="clients">
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
           <img src="/images/logo/postcube.svg" alt="Postcube Logo" width="109" height="137"/>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
           <img src="/images/logo/swarmpit.svg" alt="Swarmpit Logo" width="137" height="137"/>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
           <img src="/images/logo/om.svg" alt="OM Platform Logo" width="55" height="137"/>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
           <img src="/images/logo/ticketmonk.svg" alt="TicketMonks Logo" width="137" height="137"/>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
+          <img src="/images/logo/emmy.svg" alt="SestraEmmy Logo" width="107" height="137"/>
         </div>
       </div>
     </div>
@@ -426,6 +429,12 @@
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
             <img src="/images/logo/quickshirt.svg" alt="Logo Quickshirt" height="100" width="148"/>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+            <img src="/images/logo/veracity.png" alt="Logo Veracity Protocol" height="18" width="148"/>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+            <img src="/images/logo/paytogo.svg" alt="Logo Veracity Protocol" height="18" width="148"/>
         </div>
       </div>
     </div>
