[zive.tv] Added CZ Podcast stream page

--- a/zive.tv/src/html/index.njk
+++ b/zive.tv/src/html/index.njk
@@ -20,6 +20,7 @@
     <section id="porady">
         <h2>Pořady</h2>
         <ul>
+            <li><a href="/czpodcast">CZ Podcast</a></li>
             <li><a href="/topmonks-caffe">TopMonks Caffè</a></li>
             <li><a href="https://room.monks.cloud/">Monksroom</a></li>
         </ul>
