--- a/www.topmonks.com/src/html/macros/helpers.njk
+++ b/www.topmonks.com/src/html/macros/helpers.njk
@@ -21,7 +21,7 @@
 {% macro avatar(member, imageSize) -%}
 {% set fullName = member.name + ' ' + member.surname %}
 {% set fallback = '/assets/img/monk_logo.png' %}
-<img alt="[photo] {{fullName}}" loading="lazy" aria-hidden="true"
+<img alt="[photo] {{fullName}}" loading="lazy"
      src="https://res.cloudinary.com/topmonks/image/fetch/w_{{imageSize}},dpr_auto,f_auto/https://insight.topmonks.com/avatar/{{member.id}}"
      srcset="https://res.cloudinary.com/topmonks/image/fetch/w_{{imageSize}},dpr_1,f_auto/https://insight.topmonks.com/avatar/{{member.id}} 1x,
              https://res.cloudinary.com/topmonks/image/fetch/w_{{imageSize}},dpr_1.5,f_auto/https://insight.topmonks.com/avatar/{{member.id}} 1.5x,
