--- a/arx.monks.cloud/src/stylesheets/main.scss
+++ b/arx.monks.cloud/src/stylesheets/main.scss
@@ -1,5 +1,5 @@
 @import "@material/layout-grid/mdc-layout-grid";
-@import "common/colors";
+@import "@topmonks/shared/common/colors";
 @import "colors";
 @import "typography";
 
