--- a/monkslab.cz/src/stylesheets/main.scss
+++ b/monkslab.cz/src/stylesheets/main.scss
@@ -1,6 +1,6 @@
 @import "neueeinstellung";
 @import "@material/layout-grid/mdc-layout-grid";
-@import "common/colors";
+@import "@topmonks/shared/common/colors";
 
 :root {
   --mdc-layout-grid-margin-desktop: 24px;
