--- a/zive.tv/src/stylesheets/main.scss
+++ b/zive.tv/src/stylesheets/main.scss
@@ -1,12 +1,12 @@
 @import "@material/layout-grid/mdc-layout-grid";
-@import "common/colors";
-@import "common/typography";
+@import "@topmonks/shared/common/colors";
+@import "@topmonks/shared/common/typography";
+
 :root {
   --mdc-layout-grid-margin-desktop: 24px;
   --mdc-layout-grid-gutter-desktop: 20px;
   --mdc-layout-grid-column-width-desktop: 60px;
 }
-
 
 li a {
   line-height: 2;
