--- a/securitylab.topmonks.com/src/stylesheets/main.scss
+++ b/securitylab.topmonks.com/src/stylesheets/main.scss
@@ -27,6 +27,7 @@ img, svg {
       margin-top: 2em;
     }
   }
+
   .btn__action {
     margin: 2em 0;
   }
@@ -58,7 +59,7 @@ img, svg {
 
   @media (max-width: 539px) {
     box-shadow: none;
-    margin: 2em auto 0!important;
+    margin: 2em auto 0 !important;
     li.inactive {
       display: none;
     }
@@ -68,10 +69,16 @@ img, svg {
 .security-fields__cell {
   background-image: var(--mdc-theme--on-primary);
   border-radius: 10px;
-  padding: 6px 20px;
-
+  padding: 12px 20px;
   p {
     color: var(--mdc-theme--primary);
+  }
+}
+
+.security-fields__btn {
+  a {
+    font-size: 24px;
+    text-decoration: none;
   }
 }
 
@@ -83,3 +90,82 @@ img, svg {
     font-size: 24px;
   }
 }
+
+
+// TABS //
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+body{
+  background: #292929;
+}
+
+.wrapper{
+  width: 500px;
+  background: #fff;
+  margin: 80px auto;
+  border-radius: 3px;
+}
+
+.wrapper .tabs ul{
+  width: 100%;
+  height: 60px;
+  display: flex;
+}
+
+.wrapper .tabs ul li{
+  width: 25%;
+  height: 65px;
+  padding: 0 20px;
+  text-align: center;
+  background: #dbe3eb;
+  cursor: pointer;
+  text-transform: uppercase;
+  color: #8b9393;
+  font-size: 14px;
+  letter-spacing: 2px;
+  transition: all 0.3s ease;
+}
+
+.wrapper .tabs ul li:first-child{
+  border-top-left-radius: 3px;
+}
+
+.wrapper .tabs ul li:last-child{
+  border-top-right-radius: 3px;
+}
+
+.wrapper .tabs ul li img{
+  width: 35px;
+  height: 35px;
+  display: block;
+  margin: 0 auto 3px;
+}
+
+.wrapper .content{
+  padding: 30px;
+  height: 260px;
+  border-bottom: 6px solid #44c8fe;
+  border-radius: 3px;
+}
+
+.wrapper .content .tab_content{
+  font-size: 14px;
+  line-height: 22px;
+}
+
+.wrapper .tabs ul li.active{
+  border-top: 6px solid #44c8fe;
+  margin-top: -15px;
+  background: #fff;
+  color: #44c8fe;
+  padding-top: 9px;
+}
+
+
