--- a/securitylab.topmonks.com/src/stylesheets/header.scss
+++ b/securitylab.topmonks.com/src/stylesheets/header.scss
@@ -1,5 +1,5 @@
 .tm-app-bar {
-  color: black;
+  background-color: var(--mdc-theme--primary);
   width: 100vw;
   z-index: 1000;
   border: 1px solid #F2F2F2;
@@ -139,7 +139,7 @@
   /* Black w/opacity */
   .tm-menu__list {
     list-style-type: none;
-    font-size: 2em;
+    font-size: 4em;
   }
 
   .tm-menu__list li {
@@ -148,6 +148,8 @@
 
   .tm-menu__list {
     a {
+      font-size: 24px;
+      text-align: center;
       display: block;
       padding: 12px;
       margin: 4px;
