--- a/securitylab.topmonks.com/src/stylesheets/main.scss
+++ b/securitylab.topmonks.com/src/stylesheets/main.scss
@@ -23,6 +23,7 @@ img, svg {
 // Intro //
 
 .intro {
+  background-image: url("");
   .intro__img {
     svg {
       margin-top: 2em;
@@ -32,10 +33,20 @@ img, svg {
   .btn__action {
     margin: 2em 0;
   }
+
+  @media (max-width: 539px) {
+    .btn__action {
+      text-align: center;
+    }
+  }
+}
+
+.main h2 {
+  margin-bottom: 0;
 }
 
 .section-menu {
-  margin: 4em auto 2em !important;
+  margin: 0 auto!important;
   padding: 6px;
   border-radius: 30px;
   box-shadow: 0 12px 10px 0 #2B06540F;
@@ -51,20 +62,36 @@ img, svg {
     padding: 12px 28px;
   }
 
+  li.menu--inactive {
+    background: var(--mdc-theme--on-primary);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
   li.menu--active {
-    font-weight: 700;
-    color: #FFFFFF;
     background-image: var(--mdc-theme--on-primary);
     border-radius: 30px;
+    a {
+      font-weight: 700;
+      color: var(--mdc-theme--primary);
+      text-decoration: none;
+    }
   }
 
   @media (max-width: 539px) {
     box-shadow: none;
-    margin: 2em auto 0 !important;
+    text-align: center;
+    li {
+      font-size: 12px;
+    }
     li.menu--inactive {
       display: none;
     }
   }
+}
+
+.section-menu--software, .section-menu--social {
+  margin-top: 3em !important;
 }
 
 .security-fields__cell {
@@ -109,6 +136,9 @@ img, svg {
   #tabs_ul2 {
     li {
       width: fit-content;
+      @media (max-width: 539px) {
+        width: 33%;
+      }
     }
   }
 
@@ -126,12 +156,14 @@ img, svg {
     margin-right: 40px;
     color: var(--mdc-theme--primary-dark-grey);
 
-    & > ::before {
-      content: ">";
-      // content: url("/assets/css/tab-inactive.svg");
-      display: inline-block;
-      width: 27px;
-      height: 27px;
+    @media screen and (min-width: 540px) {
+      & > ::before {
+        content: ">";
+        // content: url("/assets/css/tab-inactive.svg");
+        display: inline-block;
+        width: 27px;
+        height: 27px;
+      }
     }
 
     &:hover {
@@ -168,13 +200,14 @@ img, svg {
     border-bottom: 3px solid var(--mdc-theme--third);
     margin-bottom: -14px;
     width: 50%;
-
-    & > ::before {
-      content: "@";
-      // content: url("/assets/css/tab-active.svg");
-      display: inline-block;
-      width: 27px;
-      height: 27px;
+    @media screen and (min-width: 540px) {
+      & > ::before {
+        content: "@";
+        // content: url("/assets/css/tab-active.svg");
+        display: inline-block;
+        width: 27px;
+        height: 27px;
+      }
     }
 
     p {
