--- a/securitylab.topmonks.com/src/stylesheets/typography.scss
+++ b/securitylab.topmonks.com/src/stylesheets/typography.scss
@@ -67,7 +67,9 @@ h1, h2, h3, p.sub-title {
     padding: 16px 60px;
 
     &:hover {
-      opacity: 0.7;
+      color: var(--mdc-theme--third);
+      background-image: none;
+      border: 2px solid var(--mdc-theme--third);
     }
   }
 }
@@ -80,7 +82,9 @@ h1, h2, h3, p.sub-title {
     padding: 12px 40px;
 
     &:hover {
-      opacity: 0.7;
+      color: var(--mdc-theme--third);
+      background-image: none;
+      border: 2px solid var(--mdc-theme--third);
     }
   }
 }
@@ -132,14 +136,15 @@ h1, h2, h3, p.sub-title {
 
 @media (max-width: 539px) {
   h1 {
-    font-size: 24px;
+    font-size: 26px;
     font-weight: bold;
-    line-height: 34px;
+    text-align: center;
+    line-height: 32px;
     margin-bottom: 14px;
   }
 
   h2 {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: bold;
     line-height: 30px;
     text-align: center;
@@ -154,9 +159,10 @@ h1, h2, h3, p.sub-title {
   }
 
   p.sub-title {
-    font-size: 20px;
+    font-size: 22px;
     font-weight: 274;
-    line-height: 24px;
+    text-align: center;
+    line-height: 26px;
     margin-top: 0;
 
     &:before {
