--- a/securitylab.topmonks.com/src/stylesheets/typography.scss
+++ b/securitylab.topmonks.com/src/stylesheets/typography.scss
@@ -57,6 +57,7 @@ h1, h2, h3, p.sub-title {
   a {
     color: var(--mdc-theme--primary);
     background-image: var(--mdc-theme--on-primary);
+    transition: all 0.25s ease-in;
   }
 }
 
@@ -65,11 +66,10 @@ h1, h2, h3, p.sub-title {
     text-decoration: none;
     border-radius: 30px;
     padding: 16px 60px;
-
     &:hover {
-      color: var(--mdc-theme--third);
       background-image: none;
-      border: 2px solid var(--mdc-theme--third);
+      color: var(--mdc-theme--third);
+      box-shadow: 0 0 0 2px var(--mdc-theme--third);
     }
   }
 }
@@ -102,9 +102,6 @@ h1, h2, h3, p.sub-title {
     font-weight: bold;
     line-height: 44px;
     text-align: center;
-    padding: 14px 32px;
-    background-color: var(--mdc-theme--primary);
-    border-radius: 10px;
   }
 
   h3 {
